Commonalise the benchmark tests